# icons

./: .gitignore  Cargo.toml  README.md  out.icns
src/: icnsfm.rs  main.rs
