[package]
name = "icons"
version = "0.1.0"
edition = "2021"
description = "Apple Icon Image format / ICO file format file generator"
authors = ["Naotsugu Kobayashi <naotsugukobayashi@gmail.com>"]
homepage = "https://github.com/naotsugu/icons"
documentation = "https://github.com/naotsugu/icons"
repository = "https://github.com/naotsugu/icons"
license = "Apache-2.0"
keywords = ["icns", "icon"]
categories = ["command-line-utilities"]

[dependencies]
image = "0.24.9"
icns = "0.3.1"
ico = "0.3.0"

